--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
     </header>
 <!--Preparation section-->
-  <section class="prep-time">
-    <p class="prep-title">
-      Preparation time
-    </p>
-    <ul class="prep-list">
-      <li class="total"><b>Total</b>: Approximately 10 minutes</li>
-      <li class="preparation"><b>Preparation</b>: 5 minutes</li>
-      <li class="cooking"><b>Cooking</b>: 5 minutes</li>
-    </ul>
-  </div>
-  <div class="recipe-info">
-  </section>
+<!--Preparation section-->
+<section class="prep-time">
+  <p class="prep-title">Preparation time</p>
+  <ul class="prep-list">
+    <li class="total"><b>Total</b>: Approximately 10 minutes</li>
+    <li class="preparation"><b>Preparation</b>: 5 minutes</li>
+    <li class="cooking"><b>Cooking</b>: 5 minutes</li>
+  </ul>
+</section>
 <!--Ingredients section-->
   <section class="ingredients">
     <h3 class="ingredients-title">Ingredients</h3>
@@ -56,6 +53,7 @@
       <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
     </ul>
   </section>
+  <hr class="divider">
 <!--Instructions section-->
   <section class="instructions">
     <h3 class="instructions-title">Instructions</h3>
@@ -72,6 +70,7 @@
         <li><b>Enjoy</b>: Serve hot, with additional salt and pepper if needed</li>
     </ol>
   </section>
+  <hr class="divider">
   <!--Nutrition section-->
   <section class="nutrition">
     <h3 class="nutrition-title">Nutrition</h3>
